syntax = "proto3";

package api.v1.services.system;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "system/types.proto";

option go_package = "v1/services/system;system";
option java_multiple_files = true;
option java_package = "com.origadmin.api.v1.services.system";
option java_outer_classname = "APIServiceSystemRoleProto";
option objc_class_prefix = "APIServiceSystemRole";

// The login service definition.
service RoleAPI {
  rpc ListRoles (ListRolesRequest) returns (ListRolesResponse) {
    option (google.api.http) = {
      get: "/api/v1/sys/roles",
    };
  }
  rpc GetRole (GetRoleRequest) returns (GetRoleResponse) {
    option (google.api.http) = {
      get: "/api/v1/sys/roles/{id}",
    };
  }
  rpc CreateRole (CreateRoleRequest) returns (CreateRoleResponse) {
    option (google.api.http) = {
      post: "/api/v1/sys/roles",
      body: "role",
    };
  }
  rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleResponse) {
    option (google.api.http) = {
      put: "/api/v1/sys/roles/{role.id}",
      body: "role",
    };
  }
  rpc DeleteRole (DeleteRoleRequest) returns (DeleteRoleResponse) {
    option (google.api.http) = {
      delete: "/api/v1/sys/roles/{id}",
    };
  }
}

message ListRolesRequest {
  // The parent resource id, for example, "shelves/shelf1".
  string id = 1;
  // The current page number.
  int32 current = 2;
  // The maximum number of items to return.
  int32 page_size = 3;
  // The next_page_token value returned from a previous List request, if any.
  string page_token = 4;
  // The no_paging is used to disable pagination.
  bool no_paging = 5;
  // The only_count is the query parameter for set only to query the total number
  bool only_count = 6;
}

message ListRolesResponse {
  // The field id should match the noun "roles" in the method id.  There
  // will be a maximum number of items returned based on the page_size field
  // in the request.
  bool success = 1 [
    json_name = "success"
  ];
  // The total number of items in the list.
  int32 total_size = 2 [
    json_name = "total_size"
  ];
  // The paging menus
  repeated api.v1.services.system.Role roles = 3 [
    json_name = "menus"
  ];
  // The current page number.
  int32 current = 4 [
    json_name = "current"
  ];
  // The maximum number of items to return.
  int32 page_size = 5 [
    json_name = "page_size"
  ];
  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 6 [
    json_name = "next_page_token"
  ];
  // Additional information about this response.
  // content to be added without destroying the current data format
  google.protobuf.Any extra = 7 [
    json_name = "extra"
  ];
}

message GetRoleRequest {
  // The field will contain id of the resource requested, for example:
  // "shelves/shelf1/roles/role2"
  string id = 1;
}

message GetRoleResponse {
  api.v1.services.system.Role role = 1;
}

message CreateRoleRequest {
  // The parent resource id where the role is to be created.
  string parent = 1;

  // The role id to use for this role.
  string role_id = 3;

  // The role resource to create.
  // The field id should match the Noun in the method id.
  api.v1.services.system.Role role = 2;
}

message CreateRoleResponse {
  api.v1.services.system.Role role = 1;
}

message UpdateRoleRequest {
  // The role resource which replaces the resource on the server.
  api.v1.services.system.Role role = 1;

}

message UpdateRoleResponse {
  api.v1.services.system.Role role = 1;
}

message DeleteRoleRequest {
  // The resource id of the role to be deleted, for example:
  // "shelves/shelf1/roles/role2"
  string id = 1;
}

message DeleteRoleResponse {
  google.protobuf.Empty empty = 1;
}